--- a/config/database.yml
+++ b/config/database.yml
@@ -58,7 +58,16 @@ development:
 test:
   <<: *default
   database: weblog_test
+ 
+  username: postgres
 
+  # The password associated with the postgres role (username).
+  password: '1234'
+
+  # Connect on a TCP socket. Omitted by default since the client uses a
+  # domain socket that doesn't need configuration. Windows does not have
+  # domain sockets, so uncomment these lines.
+  host: localhost
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
