--- a/config/database.yml
+++ b/config/database.yml
@@ -37,7 +37,7 @@ development:
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: localhost
+  host: ''
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -67,7 +67,7 @@ test:
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: localhost
+  host: ''
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -95,3 +95,4 @@ production:
   password: <%= ENV['WEBLOG_DATABASE_PASSWORD'] %>
   encoding: utf8
   pool: 15
+  url: <%= ENV["SOME_OTHER_URL"] %>
